Prevent overflow over span text in accordion

--- a/BigFont.MVC/Content/bigfont/less/bigfont-accordion-iframe.less
+++ b/BigFont.MVC/Content/bigfont/less/bigfont-accordion-iframe.less
@@ -1,7 +1,15 @@
 ﻿div.collapse-container {
 
-    iframe {
-        height: 420px;
-        width: 100%;
+    #accordion-client-list {
+
+        div.panel-heading > span {
+            max-width: 95%;
+            overflow: hidden;
+        }
+
+        iframe {
+            height: 420px;
+            width: 100%;
+        }
     }
 }
